# L4-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeL4Deps.cmake  CMakeL4Utils.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  clang-lnx.cmake  vcpkg.json
.github/workflows/: build.yml  cmake.yml
cmake/: Dependencies.cmake  Driver.cmake  Files.cmake  L4.cmake  Project.cmake  ProjectDRIVER_LNX.cmake  ProjectEXEC_NOGUI.cmake  ProjectEXEC_WIN32.cmake  ProjectHEADER_LIB.cmake  ProjectIMPORT_LIB.cmake  ProjectMODULE_LIB.cmake  ProjectSHARED_LIB.cmake  ProjectSTATIC_LIB.cmake  Properties.cmake  Utils.cmake  Version.cmake
driver/: CMakeLists.txt  Kbuild.in  mod.c
driver/impl/: CMakeLists.txt  driver.cpp
driver/module/: CMakeLists.txt  Kbuild.in  LibInterface.h  ModuleInfo.c  disk.c
driver/nothing/: nothing.c  nothing.h
modules/base/: CMakeLists.txt  Module.h  ModuleList.cpp  ModuleList.h
modules/base/modules/: ModuleList.h
modules/plugins/: CMakeLists.txt  Module.cpp  Module.h
modules/plugins/modules/plugins/: Module.cpp  Module.h
plugins/: archive.txt  protocol.txt
plugins/ffxiv/: Auth.cpp  Auth.h  AuthSession.cpp  AuthSession.h  CMakeLists.txt  Interface.cpp  Plugin.cpp  Plugin.h  Update.cpp  Update.h
plugins/ffxiv/web/: AuthedLauncherClient.cpp  AuthedLauncherClient.h  LauncherClient.cpp  LauncherClient.h  LauncherClient.win.cpp  SteamClient.cpp  SteamClient.h
plugins/ffxiv/web/models/: GateStatus.h  LoginResult.h  PatchList.h  SteamTicket.h  VersionReport.cpp  VersionReport.h
plugins/ffxiv/web/zipatch/: Crc32Stream.h  Endian.h  PatchChunk.cpp  PatchChunk.h  PatchFile.cpp  PatchFile.h  PlatformId.h  RegionId.h  SqpkCompressedBlock.h  SqpkFile.h  SubStream.h
plugins/ffxiv/web/zipatch/chunks/: ADIR.h  APLY.h  DELD.h  EOF_.h  FHDR.h  SQPK.cpp  SQPK.h
plugins/ffxiv/web/zipatch/chunks/sqpk/: Add.h  Delete.h  Expand.h  File.cpp  File.h  Header.h  Target.h
plugins/ffxiv/web/zipatch/chunks/sqpk/file/: Add.h  Delete.h  Mkdir.h  Remove.h
plugins/riot/: CMakeLists.txt  ClientServices.h  InterfaceManager.h  SourceStructs.h  Update.cpp  Update.h
plugins/test/: Auth.cpp  Auth.h  AuthSession.cpp  AuthSession.h  CMakeLists.txt  Interface.cpp  Plugin.cpp  Plugin.h  Update.cpp  Update.h  UpdateSession.cpp  UpdateSession.h
plugins/wrapper/: CMakeLists.txt
plugins/wrapper/wrapper/: Archive.cpp  Archive.h  AuthForm.h  ClientInterface.cpp  ClientInterface.h  IAuth.cpp  IAuth.h  IAuthSession.h  IPlugin.cpp  IPlugin.h  IUpdate.cpp  IUpdate.h  IUpdateSession.cpp  IUpdateSession.h  Interface.h  Interface.inl  Stream.cpp  Stream.h
resources/: L4.gresource.xml
resources/ui/: L4.cmb  L4.ui  PluginListRow.ui
sources/riot/: CMakeLists.txt  ClientServices.cpp  ClientServices.h  Interface.cpp  InterfaceManager.cpp  InterfaceManager.h  KnownFolders.cpp  KnownFolders.h  SourceStructs.h  Stream.h  Structs.h
sources/riotold/: Archive.cpp  Archive.h  ArchiveWritable.cpp  ArchiveWritable.h  CMakeLists.txt  Consts.h  Interface.cpp  Source.cpp  Source.h  Stream.h  Structs.h  Upstream.cpp  Upstream.h  f.json  get_client_data.py
sources/riotold/json/: Patchline.h
sources/wrapper/: CMakeLists.txt  Factory.h  Interface.cpp  InterfaceManager.cpp  InterfaceManager.h  InterfaceManagerWrapper.cpp  SourceStructs.h  Update.cpp  Update.h
src/: App.cpp  App.h  BasicDisk.cpp  BasicDisk.h  CMakeLists.txt  GtkMain.cpp  Main.cpp  Main.h  MainArchive.cpp  MainDiscord.cpp  MainExfat.cpp  MainGtk.cpp  MainSource.cpp  ModuleList.cpp  ModuleList.h  RamDisk.cpp  RamDisk.h
src/archive/: Archive.cpp  Archive.h  ArchiveCreator.cpp  ArchiveCreator.h  ArchiveHandle.cpp  ArchiveHandle.h  ArchiveView.cpp  ArchiveView.h  Consts.h  DirectoryTree.h  Entries.h  Entry.h  Freelist.h  Guid.h  Header.h  SectorTable.h  StreamDataConstIterator.h  StreamDataIterator.h  StreamHeader.h  StreamRun.h  StreamRunlist.h  StreamView.cpp  StreamView.h
src/archive/entries/: ClusterBitmapEntry.h  ContinuatorClusterEntry.h  ContinuatorSectorEntry.h  FileEntry.h  HeaderEntry.h  NameEntry.h  RunlistEntry.h  SDTEntry.h  SectorTableEntry.h  UpdateEntry.h  VersionEntry.h
src/disk/: GPT.cpp  GPT.h  MBR.cpp  MBR.h  Partition.h  VirtualDisk.cppn  VirtualDisk.h  exFAT.cpp  exFAT.h  exFATUpcaseTable.cpp
src/mmio/: MmioFile.cpp  MmioFile.h
src/source/: Interface.h  SourceArchive.cpp  SourceArchive.h  SourceInterface.h  SourceLibrary.cpp  SourceLibrary.h  SourceManager.cpp  SourceManager.h  SourceStream.cpp  SourceStream.h  SourceStructs.h  SourceUpdate.cpp  SourceUpdate.h
src/sourceold/source/: Archive.h  ArchiveStructs.h  ArchiveTree.h  Base.h  Error.h  Guid.h  Interface.h  Source.h  Updater.h  Upstream.h
src/streams/: FileStream.cpp  Stream.h
src/tree/: IntervalTree.h
src/utils/: Align.h  Config.cpp  Config.h  Crc32.h  Debug.h  EnumFlags.h  Error.h  HandleWrapper.h  IntervalTree.h  Log.cpp  Log.h  Random.cpp  Random.h  StackTrace.cpp  StackTrace.h
src/utils/formatters/: Path.h
src/web/: Http.cpp  Http.h
